[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ldbgames-server"
version = "0.1.0"
description = "API server for LDBGames"
authors = [{name = "Ladybugged"}]
requires-python = ">=3.10"

dependencies = [ "fastapi", "uvicorn[standard]" ]

[project.scripts]
ldbgames-server = "server.api:main"